syntax = "proto3";
package loyalty.events;

import "google/protobuf/timestamp.proto";

option go_package = "../pkg/kafka/events;eventspb";

message ClientRegistrationEvent {
  string client_id = 1;
  google.protobuf.Timestamp registered_at = 2;
}

message ViewEvent {
  string event_id = 1;
  string client_id = 2;
  string entity_id = 3;
  google.protobuf.Timestamp viewed_at = 4;
}

message ClickEvent {
  string event_id = 1;
  string client_id = 2;
  string entity_id = 3;
  google.protobuf.Timestamp clicked_at = 4;
}

message CommentEvent {
  string comment_id = 1;
  string client_id = 2;
  string entity_id = 3;
  string message = 4;
  google.protobuf.Timestamp commented_at = 5;
}

